--- a/src/assets/i18n/ro.json
+++ b/src/assets/i18n/ro.json
@@ -3,6 +3,7 @@
         "InvalidLogin": "Nume de utilizator sau parolă sunt invalide, încearcă din nou!",
         "ResetPassword": "O parolă temporară a fost trimisa pe email-ul contului!",
         "BagSealed": "Sacul a fost sigilat cu succes!",
+        "CodeScanned": "Sigiliul a fost scanat cu succes!",
         "SealNotEnoughQuantity": "Nu dețineți aceasta cantitate pentru a putea fi sigilata!",
         "CameraPermission": "Vă rugăm să acordați camerei permisiunea de a utiliza scanerul de coduri de bare.",
         "ProductRegistered": "Produsul a fost înregistrat cu succes!",
@@ -64,7 +65,11 @@
         "ChooseCategory": "Alege categoria de sigilare",
         "Quantity": "Cantitatea de sigilare",
         "QuantityPlaceholder": "Introdu cantitatea de sigilare",
-        "Seal": "Sigilează sacul"
+        "Seal": "Sigilează sacul",
+        "Code": "Codul sigiliului",
+        "CodePlaceholder": "Scaneaza codul sigiliului",
+        "ScanCode": "Scanează sigiliu",
+        "RescanCode": "Rescanează sigiliu"
     },
     "VoucherHistory": {
         "Types": {
