--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
         "InvalidLogin": "Invalid username or password, please try again!",
         "ResetPassword": "A temporary password has been sent to the account's email!",
         "BagSealed": "The bag has been successfully sealed!",
+        "CodeScanned": "The seal has been successfully scanned!",
         "SealNotEnoughQuantity": "You do not have enough quantity to seal this!",
         "CameraPermission": "Please grant camera permission to use the barcode scanner.",
         "ProductRegistered": "The product has been successfully registered!",
@@ -64,7 +65,11 @@
         "ChooseCategory": "Choose the sealing category",
         "Quantity": "Sealing quantity",
         "QuantityPlaceholder": "Enter the sealing quantity",
-        "Seal": "Seal the bag"
+        "Seal": "Seal the bag",
+        "Code": "Seal code",
+        "CodePlaceholder": "Scan the seal code",
+        "ScanCode": "Scan seal",
+        "RescanCode": "Rescan seal"
     },
     "VoucherHistory": {
         "Types": {
