--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,8 @@
         "VoucherPrint": "Voucher printed successfully!",
         "VoucherReprint": "Voucher reprinted successfully!",
         "PrinterError": "An error occurred with the printer, please try again later!",
-        "TicketPrint": "Ticket reprinted successfully!"
+        "TicketPrint": "Ticket reprinted successfully!",
+        "QRDoesNotExist": "This type of QR voucher is not valid, please try again!"
     },
     "Login": {
         "Title": "Manual Collection Solution DRS",
