chore: prepare demo for kaufland PL

--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -46,7 +46,7 @@
     },
     "Home": {
         "Plastic": "Plastik",
-        "Aluminium": "Aluminium",
+        "Aluminium": "Aluminiowy",
         "Glass": "Szkło",
         "Options": {
             "Pickup": "Zamów odbiór worków",
